# agentic-bff-sdk

./: .gitignore  README.md  pyproject.toml
agentic_bff_sdk/: __init__.py  agent_executor.py  aggregation.py  aggregator.py  audit.py  blackboard.py  card_generator.py  channels.py  config.py  dispatch.py  dispatcher.py  domain.py  domain_gateway.py  errors.py  events.py  gateway.py  models.py  pipeline.py  planner.py  planning.py  plugins.py  response.py  router.py  rules.py  sdk.py  session.py  sop_runner.py  synthesizer.py  tasks.py
demos/: README.md  demo_01_blackboard_session.py  demo_02_intent_routing.py  demo_03_plan_and_dispatch.py  demo_04_domain_gateway.py  demo_05_sop_runner.py  demo_06_aggregator_synthesizer_cards.py  demo_07_error_handling.py  demo_08_plugins_and_config.py  demo_09_full_pipeline.py
docs/: 01-models-config.md  01-sdk-overview.md  02-models-config.md  02-session-blackboard.md  03-router.md  03-session-blackboard.md  04-planner-dispatcher.md  04-router.md  05-domain-agent.md  05-planning-dispatch.md  06-domain-agent-rules.md  06-sop-runner.md  07-aggregation-response.md  07-aggregator-synthesizer-cards.md  08-gateway-pipeline-tasks.md  08-gateway.md  09-channels-factory.md  09-plugins-factory.md  10-errors-audit.md  10-errors-events-audit.md  11-testing.md
tests/: conftest.py  test_agent_executor.py  test_agent_executor_properties.py  test_aggregator.py  test_aggregator_properties.py  test_audit.py  test_blackboard.py  test_blackboard_properties.py  test_card_generator.py  test_card_generator_properties.py  test_config.py  test_dispatcher.py  (+20 more)
(+6 files in other folders)
