[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-bff-sdk"
version = "0.1.0"
description = "Multi-Agent System Orchestration SDK based on LangChain/LangGraph"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "langchain-core>=0.3.0,<2.0.0",
    "langgraph>=0.2.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "hypothesis>=6.100.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "property: Property-based tests using Hypothesis",
]

[tool.hypothesis]
max_examples = 100
